--- a/src/app/layout/default/default.component.css
+++ b/src/app/layout/default/default.component.css
@@ -1,9 +1,4 @@
 .header{
-	--header-hg: 60px;
-	--header-bg: #000000;
-  --header-padding: 10px;
-  --header-font-color: #ffffff;
-	--aside-wd: 200px;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -15,8 +10,10 @@
   box-shadow: 0 1px 10px rgba(0,0,0,0.2);
   background-color: var(--header-bg);
   color: var(--header-font-color);
-	z-index: 1;
+	z-index: calc(var(--zindex) + 10);
 }
+
+
 
 
 
