--- a/src/app/layout/default/header/header.component.css
+++ b/src/app/layout/default/header/header.component.css
@@ -1,6 +1,6 @@
 
 .logo{
-	margin-left: var(--header-padding);
+	/* margin-left: var(--header-padding); */
 	width: var(--aside-wd);
 	transition: width .2s ease;
 }
