--- a/src/app/layout/default/sidebar/sidebar.component.html
+++ b/src/app/layout/default/sidebar/sidebar.component.html
@@ -1,20 +1,30 @@
 <div class="aside-inner">
-    <ul nz-menu [nzTheme]="'dark'" [nzMode]="isCollapsed?'vertical':'inline'">
-        <li nz-submenu>
-          <span title><i class="anticon anticon-user"></i><span class="nav-text">User</span></span>
-          <ul>
-            <li nz-menu-item>Tom</li>
-            <li nz-menu-item>Bill</li>
-            <li nz-menu-item>Alex</li>
-          </ul>
-        </li>
-        <li nz-submenu>
-          <span title><i class="anticon anticon-team"></i><span class="nav-text">Team</span></span>
-          <ul>
-            <li nz-menu-item>Team 1</li>
-            <li nz-menu-item>Team 2</li>
-          </ul>
-        </li>
-        <li nz-menu-item><span><i class="anticon anticon-file"></i><span class="nav-text">File</span></span></li>
+  <ul nz-menu [nzTheme]="'dark'" [nzMode]="isCollapsed?'vertical':'inline'">
+    <li nz-submenu>
+      <span title><i class="anticon anticon-user"></i><span class="nav-text">Dashboard</span></span>
+      <ul>
+        <li nz-menu-item><a routerLink="/dashboard/v1">v1</a></li>
+        <li nz-menu-item><a routerLink="/dashboard/analysis">Analysis</a></li>
+        <li nz-menu-item><a routerLink="/dashboard/monitor">monitor</a></li>
+        <li nz-menu-item><a routerLink="/dashboard/workplace">Workplace</a></li>
       </ul>
+    </li>
+    <li nz-submenu>
+      <span title><i class="anticon anticon-user"></i><span class="nav-text">User</span></span>
+      <ul>
+        <li nz-menu-item>Tom</li>
+        <li nz-menu-item>Bill</li>
+        <li nz-menu-item>Alex</li>
+      </ul>
+    </li>
+    <li nz-submenu>
+      <span title><i class="anticon anticon-team"></i><span class="nav-text">Team</span></span>
+      <ul>
+        <li nz-menu-item>Team 1</li>
+        <li nz-menu-item>Team 2</li>
+      </ul>
+    </li>
+    <li nz-menu-item><span><i class="anticon anticon-file"></i><span class="nav-text">File</span></span>
+    </li>
+  </ul>
 </div>
