--- a/src/app/routes/passport/login/login.component.html
+++ b/src/app/routes/passport/login/login.component.html
@@ -6,39 +6,33 @@
   <section>
     <form nz-form [formGroup]="loginForm" (ngSubmit)="submit()">
       <nz-alert *ngIf="error" [nzType]="'error'" [nzMessage]="error" [nzShowIcon]="true" class="mb-lg"></nz-alert>
-      <div nz-form-item>
-        <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-          <nz-input formControlName="username" [nzPlaceHolder]="'admin'" [nzSize]="'large'">
-            <ng-template #prefix>
-              <i class="anticon anticon-user"></i>
-            </ng-template>
-          </nz-input>
-          <div nz-form-explain *ngIf="loginForm.controls.username.dirty&&loginForm.controls.username.hasError('required')">请输入用户名!</div>
-          <div nz-form-explain *ngIf="loginForm.controls.username.dirty
+      <nz-form-item>
+        <nz-form-control  nzHasFeedback>
+          <nz-input-group nzSize="large" nzPrefixIcon="anticon anticon-user">
+            <input nz-input formControlName="username" placeholder="admin" >
+          </nz-input-group>
+          <nz-form-explain *ngIf="loginForm.controls.username.dirty&&loginForm.controls.username.hasError('required')">请输入用户名!</nz-form-explain>
+          <nz-form-explain *ngIf="loginForm.controls.username.dirty
                     &&(loginForm.controls.username.hasError('minLength')||loginForm.controls.username.hasError('maxLength')||loginForm.controls.username.hasError('pattern'))">
             用户名长度在3~6位,只能包含字母,数字!
-          </div>
-        </div>
-      </div>
-      <div nz-form-item>
-        <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-          <nz-input formControlName="password" [nzType]="'password'" [nzPlaceHolder]="'111'" [nzSize]="'large'">
-            <ng-template #prefix>
-              <i class="anticon anticon-lock"></i>
-            </ng-template>
-          </nz-input>
-          <div nz-form-explain *ngIf="loginForm.controls.password.dirty&&loginForm.controls.password.hasError('required')">请输入密码!</div>
-          <div nz-form-explain *ngIf="loginForm.controls.password.dirty
+          </nz-form-explain>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-control  nzHasFeedback>
+          <nz-input-group nzSize="large" nzPrefixIcon="anticon anticon-lock">
+              <input nz-input type="password" formControlName="password" placeholder="111">
+          </nz-input-group>
+          <nz-form-explain *ngIf="loginForm.controls.password.dirty&&loginForm.controls.password.hasError('required')">请输入密码!</nz-form-explain>
+          <nz-form-explain *ngIf="loginForm.controls.password.dirty
                     &&(loginForm.controls.password.hasError('minLength')||loginForm.controls.password.hasError('maxLength')||loginForm.controls.password.hasError('pattern'))">
             密码长度在1~8位,并且不能包含空格!
-          </div>
-        </div>
-      </div>
-      <div nz-form-item>
-        <div nz-form-control>
-          <button nz-button type="submit" nzType="primary" nzSize="large" [nzLoading]="loading" class="ant-btn__block">登录</button>
-        </div>
-      </div>
+          </nz-form-explain>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+          <button nz-button type="submit" nzType="primary" nzSize="large" [nzLoading]="loading" class="ant-btn__block">登录</button>          
+      </nz-form-item>
     </form>
   </section>
   <footer>
