update ng-zorro-antd to 0.7.0, add side-bar nav icon collapsed

--- a/src/app/layout/default/header/header.component.html
+++ b/src/app/layout/default/header/header.component.html
@@ -9,7 +9,7 @@
     <!-- Menu -->
     <li>
       <div class="item" (click)="toggleCollapsedSidebar()">
-        <i class="anticon anticon-menu-{{collapsed ? 'unfold' : 'fold'}}"></i>
+        <i class="anticon anticon-menu-{{collapsed ? 'fold' : 'unfold'}}"></i>
       </div>
     </li>
   </ul>
